<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cF8F8F8"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="duanjie.projectframework.home.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/title_default" />
    </LinearLayout>

    <FrameLayout style="@style/lines_cF8F8F8" />

    <EditText
        android:id="@+id/ed_notice_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:background="@color/white"
        android:hint="@string/notice_title"
        android:maxLength="50"
        android:paddingLeft="@dimen/text_height_16"
        android:textColor="@color/c111A38"
        android:textColorHint="@color/c999FA7"
        android:textSize="18sp" />

    <FrameLayout style="@style/lines_cF8F8F8_16" />

    <EditText
        android:id="@+id/ed_notice_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height_120"
        android:background="@color/white"
        android:gravity="top|left"
        android:hint="@string/notice_content"
        android:maxLength="200"
        android:padding="@dimen/text_height_16"
        android:textColor="@color/c111A38"
        android:textColorHint="@color/c999FA7"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@color/white"
        android:gravity="right"
        android:paddingRight="@dimen/text_height_16">

        <TextView
            android:id="@+id/leftNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/200" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pathView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="路径"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <duanjie.projectframework.home.VoiceView
            android:id="@+id/voiceView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_voice_corner"
            android:gravity="right"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:textColor="#3677DA"
            android:textSize="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pathView" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/playLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/videoView"
            android:layout_width="177dp"
            android:layout_height="100dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_play" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:overScrollMode="never" />

    <FrameLayout style="@style/lines_cF8F8F8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height_54"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/pictureLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon_picture"
                android:drawablePadding="10dp"
                android:text="@string/text_picture"
                android:textColor="@color/c999FA7"
                android:textSize="15sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:background="@color/cF8F8F8"
            android:paddingBottom="@dimen/text_height_16"
            android:paddingTop="@dimen/text_height_16" />


        <LinearLayout
            android:id="@+id/ly_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon_record"
                android:drawablePadding="10dp"
                android:text="@string/text_record"
                android:textColor="@color/c999FA7"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/cF8F8F8" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/text_height_16"
        android:paddingRight="@dimen/text_height_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_release"
            android:textColor="@color/c111A38"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_back_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_back_right" />

        <TextView
            android:id="@+id/allClassView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:text="@string/text_class"
            android:textColor="@color/c3677DA"
            android:textSize="15sp" />

    </RelativeLayout>

    <FrameLayout style="@style/lines_cF8F8F8" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/text_height_16"
        android:paddingRight="@dimen/text_height_16">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="抄送学生家长"
                android:textColor="@color/c111A38"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="绑定学生账号的家长也会收到通知"
                android:textColor="@color/c999FA7"
                android:textSize="13sp" />
        </LinearLayout>


        <com.suke.widget.SwitchButton
            android:id="@+id/switchButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:sb_background="#e1e0e5"
            app:sb_checked_color="#3677DA"
            app:sb_show_indicator="false"
            app:sb_uncheck_color="#e1e0e5" />

    </RelativeLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/cF8F8F8" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/text_height_16"
        android:paddingRight="@dimen/text_height_16">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="需要回执"
            android:textColor="@color/c111A38"
            android:textSize="15sp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_picture"
            android:visibility="gone" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switchButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:sb_background="#e1e0e5"
            app:sb_checked_color="#3677DA"
            app:sb_show_indicator="false"
            app:sb_uncheck_color="#e1e0e5" />

    </RelativeLayout>

</LinearLayout>
